--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@types/jquery": "^3.3.31",
     "element-angular": "^0.7.6",
     "freeng": "^0.6.1",
+    "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.1.2",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
+    "wangeditor": "^3.1.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
